--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
             // Option 1: Email (opens email client)
             const emailBody = formatResponsesForEmail(responses);
             const emailSubject = 'Proje Yönetimi Araştırması - Yanıtlar';
-            const emailUrl = `mailto:sizin.email@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
+            const emailUrl = `mailto:serdarbahar09@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`;
             
             // Option 2: Download as text file
             downloadResponsesAsFile(responses);
