--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@ Bu bilgiler sadece sizinle iletişim kurmak için kullanılacak." onInput="updat
                 const emailSubject = 'Proje Yönetimi Araştırması - Yeni Yanıt';
                 
                 // Open email client
-                window.open(`mailto:serdarbahar09@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`);
+                //window.open(`mailto:serdarbahar09@gmail.com?subject=${encodeURIComponent(emailSubject)}&body=${encodeURIComponent(emailBody)}`);
                 
                 // Download backup file
                 downloadResponsesAsFile(responses);
