--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
   <div class="completion-wrapper" id="completionWrapper" aria-live="polite">
     <div class="completion-card" id="completionMessage" tabindex="-1">
       <h2>🙏 Vakit ayırdığınız için teşekkür ederim.</h2>
-      <p>📧 İletişim için: <span class="accent">serdarbahar09@gmail.com</span> mesaj atabilirsiniz.</p>
+      <p>📧 İletişim için: <span class="accent">anket@projegercegi.com</span> mesaj atabilirsiniz.</p>
       <div class="cta">
         <button type="button" class="btn btn-red" onclick="startNewResponse()">🔄 Yeni Cevap Gir</button>
       </div>
