--- a/index.html
+++ b/index.html
@@ -572,19 +572,18 @@
       const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyJS-muCjXuDKIjfRuO-ss3BLSQO6eWy2HpKQ-B7lweljeIZki8B0dC4Ftt3Nfk3m1t/exec';
 
       // --- ✅ GÜNCEL: JSON yerine URL-encoded gönderim (Apps Script ile en uyumlusu)
+      
       const params = new URLSearchParams();
-      Object.entries(responses).forEach(([k, v]) => { params.append(k, typeof v === 'string' ? v : String(v)); });
-      // Türkçe aliaslar (opsiyonel ama kullanışlı)
-      params.append('insan_dinamikleri', responses.human_challenge || '');
-      params.append('operasyonel_zorluklar', responses.operational_challenge || '');
-      params.append('en_buyuk_kriz', responses.biggest_crisis || '');
+      Object.entries(responses).forEach(([k, v]) => params.append(k, String(v ?? '')));
 
       fetch(GOOGLE_SCRIPT_URL, {
-        method: 'POST',
-        mode: 'no-cors',
-        headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
-        body: params.toString()
-      }).catch(() => { console.log('Form gönderildi'); });
+      method: 'POST',
+      mode: 'no-cors',
+      headers: { 'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8' },
+      body: params.toString()
+      });
+
+      
 
       // 7) Başarı ekranını göster
       setTimeout(() => {
